minor change for deploy check

--- a/locales/pl.json
+++ b/locales/pl.json
@@ -3,8 +3,8 @@
     "home": "Start",
     "about": "Info",
     "login": "Logowanie",
-    "english": "English version",
-    "polish": "Polish version",
+    "english": "English version X",
+    "polish": "Polish version X",
     "langlabel": "Version"
   },
   "home": {
