add Nuxt Firebase

--- a/locales/en.json
+++ b/locales/en.json
@@ -3,6 +3,7 @@
     "home": "Home",
     "about": "About",
     "login": "Login",
+    "admin": "Admin",
     "english": "Wersja angielska",
     "polish": "Wersja polska",
     "langlabel": "Version"
