--- a/locales/pl.json
+++ b/locales/pl.json
@@ -3,6 +3,7 @@
     "home": "Start",
     "about": "Info",
     "login": "Logowanie",
+    "admin": "Administracja",
     "english": "English version X",
     "polish": "Polish version X",
     "langlabel": "Version"
