add login check when user not existing or mismatched password, some handling of form reload and initial outline of blog component

--- a/locales/en.json
+++ b/locales/en.json
@@ -39,6 +39,9 @@
         "minLength": "Field '@:login.password-label' requires min {minlength} characters.",
         "maxLength": "Field '@:login.password-label' exeeds max length of {maxlength} characters."
       }
-    }
+    },
+    "auth/user-not-found": "There is no user record corresponding to this identifier. The user may have been deleted.",
+    "auth/wrong-password": "The password is invalid or the user does not have a password.",
+    "auth/too-many-requests": "Too many unsuccessful login attempts. Please try again later."
   }
 }
